--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,11 @@ header b {
   z-index: 2;
 }
 
+#webcamCropped-canvas {
+  display: none;
+  z-index: 2;
+}
+
 #result {
   text-align: center;
   color: red;
